Fix import button z-index and positioning

--- a/static/style.css
+++ b/static/style.css
@@ -1069,6 +1069,11 @@ select:focus {
     margin-bottom: 16px;
 }
 
+.import-export-buttons .btn {
+    position: relative;
+    overflow: hidden;
+}
+
 .hidden-file-input {
     position: absolute;
     top: 0;
@@ -1077,6 +1082,7 @@ select:focus {
     height: 100%;
     opacity: 0;
     cursor: pointer;
+    z-index: 10;
 }
 
 .template-name-input-wrapper,
